# monty-hall-aztec

./: .gitignore  README.md  compare.sh  compare_mpc.sh
contract/: Nargo.toml
contract/src/: main.nr  private_shared_mutable.nr  taceo_note.nr
monty_hall_test/: Nargo.toml
monty_hall_test/src/: main.nr
mpc/: Cargo.toml
mpc/monty-hall-orchestration/: Cargo.toml  dev.env
mpc/monty-hall-orchestration/data/: monty_hall_init.vk  node1.pk  node2.pk  node3.pk
mpc/monty-hall-orchestration/src/: config.rs  error.rs  main.rs  mpc_node.rs  routes.rs
mpc/monty-hall-orchestration/src/routes/: user.rs
mpc/mpc-node/: Cargo.toml
mpc/mpc-node/data/circuits/: monty_hall_init.json  taceo_commit.json
mpc/mpc-node/data/configs/: party1.toml  party2.toml  party3.toml
mpc/mpc-node/migrations/: 20250314151710_init_db.down.sql  20250314151710_init_db.up.sql
mpc/mpc-node/scripts/: docker-compose.db.yaml  start_nodes.sh
mpc/mpc-node/src/: config.rs  crypto_device.rs  data_store.rs  main.rs  mpc.rs
mpc/protos/: Cargo.toml  build.rs  monty_hall.proto
mpc/protos/src/: lib.rs  monty_hall.rs
noir_logic/: compare.sh  compare_mpc.sh
noir_logic/dh_test/: Nargo.toml  Prover.toml
noir_logic/dh_test/src/: main.nr
noir_logic/monty_hall/: Nargo.toml
noir_logic/monty_hall/src/: ae.nr  game_state.nr  lib.nr  private_state.nr  prng.nr
noir_logic/monty_hall_choose/: Nargo.toml  Prover.toml
noir_logic/monty_hall_choose/src/: main.nr
noir_logic/monty_hall_init/: Nargo.toml  Prover.toml
noir_logic/monty_hall_init/src/: main.nr
noir_logic/monty_hall_switch/: Nargo.toml  Prover.toml
noir_logic/monty_hall_switch/src/: main.nr
noir_logic/monty_hall_test/: Nargo.toml  Prover.toml
noir_logic/monty_hall_test/src/: main.nr
noir_logic/pss_utils/: Nargo.toml
noir_logic/pss_utils/src/: ae.nr  commit.nr  dh.nr  field.nr  lib.nr  private_state.nr  prng.nr
noir_logic/src/: game_state.nr  lib.nr  private_state.nr  prng.nr
noir_logic/taceo_commit/: Nargo.toml  Prover.toml
noir_logic/taceo_commit/src/: main.nr
