[workspace]
members = [
    "mpc-node",
    "protos",
    "monty-hall-orchestration",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
ark-bn254 = "0.5.0"
clap = { version = "4.5", features = ["derive", "env"] }
tonic = { version = "0.12.3" }
prost = { version = "0.13.5" }
prost-types = { version = "0.13.5" }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.15.1" }
eyre = { version = "0.6.12" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44.1", features = ["full"] }
crypto_box = {version ="0.9.1", features = ["chacha20"] }
