[package]
name = "protos"
version = "0.1.0"
description = "A crate managing the protobuf definitions for the gRPC services."

edition.workspace = true
rust-version.workspace = true


[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
uuid.workspace = true

[build-dependencies]
eyre = { workspace = true }
tonic-build = { version = "0.12.2" }
